--- a/TemaplateGenerationPlatform.API/appsettings.json
+++ b/TemaplateGenerationPlatform.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TemplateGeneration;Username=postgres;Password=boler2020"
+  },
   "AllowedHosts": "*"
 }
