--- a/TemaplateGenerationPlatform.Application/TemaplateGenerationPlatform.Application.csproj
+++ b/TemaplateGenerationPlatform.Application/TemaplateGenerationPlatform.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
   </ItemGroup>
 
   <ItemGroup>
